# Homework_28_PD12

./: .gitignore  README.md  manage.py  pyproject.toml
Homework_28_PD12/: asgi.py  import_csv.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad_urls.py  cat_urls.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
